--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ platformdirs==2.5.2
 pycodestyle==2.9.1
 pydantic==1.10.2
 pyflakes==2.5.0
+pytest==6.1.1
 sniffio==1.3.0
 SQLAlchemy==1.4.41
 sqlalchemy-stubs==0.4
